--- a/src/App.scss
+++ b/src/App.scss
@@ -8,14 +8,16 @@
   header {
     font-weight: bold;
     margin-bottom: 10px;
-    font-size: 1rem;
+    margin-top: 5px;
+    font-size: 1.1rem;
   }
   section {
     .title-bar {
       margin-bottom: 5px;
     }
     .folder-list {
-      min-height: 120px;
+      min-height: 150px;
+      display: flex;
       position: relative;
     }
   }
