--- a/src/common.scss
+++ b/src/common.scss
@@ -4,6 +4,6 @@
   font-size: 1.2rem;
   margin: 2px 10px;
   color: lightgrey;
-  border: 1px solid lightgrey;
   padding: 5px 20px;
+  width: 100%;
 }
