Add: Create Todo

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,5 +20,10 @@
       display: flex;
       position: relative;
     }
+    .todo-list {
+      width: 100%;
+      max-width: 350px;
+      margin: 0 auto;
+    }
   }
 }
