--- a/src/common.scss
+++ b/src/common.scss
@@ -2,8 +2,7 @@
   font-weight: bold;
   text-align: center;
   font-size: 1.2rem;
-  margin: 2px 10px;
   color: lightgrey;
-  padding: 5px 20px;
+  padding: 5px;
   width: 100%;
 }
