--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,12 @@
 @import "./common.scss";
 
 .app {
+  font-family: font1;
   width: 100%;
+  height: 100%;
   max-width: 500px;
   margin: 0 auto;
   padding: 0 10px;
-  header {
-    font-weight: bold;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    font-size: 1.1rem;
-  }
   section {
     .title-bar {
       margin-bottom: 5px;
