--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,16 @@
     .folder-list {
       min-height: 150px;
       display: flex;
+      flex-direction: column;
       position: relative;
+      .folders {
+        flex: 1 1 auto;
+      }
+      .actions {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+      }
     }
     .todo-list {
       width: 100%;
